use basicrepository to prevent duplicate shapefile datastores; added in some safety checks on sld detection since it was failing on windows for me - unable to understand 'protocol c:' ...
git-svn-id: http://svn.osgeo.org/geotools/trunk@33201 e5c1c795-43da-0310-a71f-fac65c449510